--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:js": "eslint . --ext ts,tsx --report-unused-disable-directives --format stylish --color",
     "lint:types": "tsc --noEmit",
     "check:css-vars": "node scripts/check-css-variables.js",
-    "check:css-classes": "node scripts/check-css-classes.js"
+    "check:css-classes": "node scripts/check-css-classes.js",
+    "start": "vite build && vite preview"
   },
   "dependencies": {
     "@blinkdotnew/sdk": "^0.17.4",
